--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
             <div class="duration-wrapper">
-                <span id="current-time">0:00</span>
-                <span id="duration"></span>
+                <span id="current-time">00:00</span>
+                <span id="duration">04:01</span>
             </div>
         </div>
         <!-- Controls -->
